cmake_minimum_required(VERSION 3.14)
project(Example)

if (WIN32 OR UNIX)
    set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/phtree)
    set(SOURCES example.cc ${INCLUDE_DIR}/phtree.h ${INCLUDE_DIR}/phtree_multimap.h)
    add_executable(test ${SOURCES})
    target_include_directories(test PRIVATE ${INCLUDE_DIR})
else()
    set(SOURCE_FILES example.cc)
    add_executable(Example ${SOURCE_FILES})
    target_link_libraries(Example phtree)
endif()